tests/ui/simd/type-generic-monomorphisation-empty.stderr
error: the SIMD type `Simd<0>` has zero elements
  --> $DIR/type-generic-monomorphisation-empty.rs:9:9
   |
LL |     let _empty = Simd::<0>([]);
   |         ^^^^^^

error: aborting due to 1 previous error

